@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2004, 2005, 2006 Apple Inc.
- *
+ * 
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
  * License as published by the Free Software Foundation; either
